@@ -23,6 +23,9 @@
 
   7. Delete deprecated `GoogleHadoopGlobalRootedFileSystem`.
 
+  8. Fix thread leaks that were occurring when YARN log aggregation uploaded
+     logs to GCS.
+
 
 1.8.1 - 2018-03-29
 
